objects/Schedules__c.object
<CustomObject>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MGM_HD_Daypart__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>01:00A</fullName>
                </value>
                <value>
                    <fullName>01:30A</fullName>
                </value>
                <value>
                    <fullName>02:00A</fullName>
                </value>
                <value>
                    <fullName>02:30A</fullName>
                </value>
                <value>
                    <fullName>03:00A</fullName>
                </value>
                <value>
                    <fullName>03:30A</fullName>
                </value>
                <value>
                    <fullName>04:00A</fullName>
                </value>
                <value>
                    <fullName>04:30A</fullName>
                </value>
                <value>
                    <fullName>05:00A</fullName>
                </value>
                <value>
                    <fullName>05:30A</fullName>
                </value>
                <value>
                    <fullName>06:00A</fullName>
                    <default>true</default>
                    <label>06:00A</label>
                </value>
                <value>
                    <fullName>06:30A</fullName>
                </value>
                <value>
                    <fullName>07:00A</fullName>
                </value>
                <value>
                    <fullName>07:30A</fullName>
                </value>
                <value>
                    <fullName>08:00A</fullName>
                </value>
                <value>
                    <fullName>08:30A</fullName>
                </value>
                <value>
                    <fullName>09:00A</fullName>
                </value>
                <value>
                    <fullName>09:30A</fullName>
                </value>
                <value>
                    <fullName>10:00A</fullName>
                </value>
                <value>
                    <fullName>10:30A</fullName>
                </value>
                <value>
                    <fullName>11:00A</fullName>
                </value>
                <value>
                    <fullName>11:30A</fullName>
                </value>
                <value>
                    <fullName>12:00P</fullName>
                </value>
                <value>
                    <fullName>12:30P</fullName>
                </value>
                <value>
                    <fullName>01:00P</fullName>
                </value>
                <value>
                    <fullName>01:30P</fullName>
                </value>
                <value>
                    <fullName>02:00P</fullName>
                </value>
                <value>
                    <fullName>02:30P</fullName>
                </value>
                <value>
                    <fullName>03:00P</fullName>
                </value>
                <value>
                    <fullName>03:30P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equiv_30_Booked__c</fullName>
        <description>Equiv :30 Booked for use in clearance calculations</description>
        <formula>if( ISPICKVAL( Status__c , &quot;Canceled&quot;), 0, 

(VALUE(TEXT(Deal_Parent__r.Length__c)))/30 * Units_Available__c 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Equiv :30 Booked for use in clearance calculations</inlineHelpText>
        <label>Equiv :30 - Booked</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equiv_30_Bundles__c</fullName>
        <formula>if( ISPICKVAL( Status__c , &quot;Canceled&quot;), 0, 

(VALUE(TEXT(Deal_Parent__r.Length__c)))/30 * Total_Bundle_Units__c 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if( ISPICKVAL( Status__c , &quot;Canceled&quot;), 0, 

case(Deal_Parent__r.Length__c, &quot;10&quot;, 10, &quot;30&quot;, 30, &quot;45&quot;, 45, &quot;60&quot;, 60, &quot;75&quot;, 75, &quot;120&quot;, 120, &quot;300&quot;, 300, &quot;15&quot;, 15, &quot;90&quot;, 90, &quot;180&quot;, 180, 0)/30 *  Total_Bundle_Units__c 

)</inlineHelpText>
        <label>Equiv :30 - Bundles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equiv_30_Canceled__c</fullName>
        <description>Equiv :30 - Canceled.  Equiv :30 Booked excludes canceled spots, this formula includes only Canceled Schedules</description>
        <formula>if( ISPICKVAL( Status__c , &quot;Canceled&quot;), 

(VALUE(TEXT(Deal_Parent__r.Length__c)))/30 * Units_Available__c, 
0 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if( ISPICKVAL( Status__c , &quot;Canceled&quot;), 

case(Deal_Parent__r.Length__c, &quot;10&quot;, 10, &quot;30&quot;, 30, &quot;45&quot;, 45, &quot;60&quot;, 60, &quot;75&quot;, 75, &quot;120&quot;, 120, &quot;300&quot;, 300, &quot;15&quot;, 15, &quot;90&quot;, 90, &quot;180&quot;, 180, 0)/30 * Units_Available__c,
0

)</inlineHelpText>
        <label>Equiv :30 - Canceled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equiv_30__c</fullName>
        <formula>if(Deal_Parent__r.Brands__r.Name  =&quot;Budget&quot; , 0,

Total_Time__c  / 30

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equiv :30</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Cost__c</fullName>
        <inlineHelpText>Input the amount of dollars lost due to error.....for internal use</inlineHelpText>
        <label>[Dep]Error Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Error_Logged_Date__c</fullName>
        <label>[Dep]Error Logged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Logged_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[Dep]Error Logged To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <inlineHelpText>Input one (or more) reasons error occurred</inlineHelpText>
        <label>[Dep]Error Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency Favor</fullName>
                </value>
                <value>
                    <fullName>Booked with no Order</fullName>
                </value>
                <value>
                    <fullName>Cancellation not Entered</fullName>
                </value>
                <value>
                    <fullName>Incorrect Break Entered</fullName>
                </value>
                <value>
                    <fullName>Incorrect Cable Daypart</fullName>
                </value>
                <value>
                    <fullName>Incorrect Days Allowed Selected</fullName>
                </value>
                <value>
                    <fullName>Incorrect Spot Separation</fullName>
                </value>
                <value>
                    <fullName>Incorrect Times Selected</fullName>
                </value>
                <value>
                    <fullName>Not Entered</fullName>
                </value>
                <value>
                    <fullName>Post Log Error</fullName>
                </value>
                <value>
                    <fullName>Prelog Error</fullName>
                </value>
                <value>
                    <fullName>Ran Out of Rotation</fullName>
                </value>
                <value>
                    <fullName>Raycom Bonus</fullName>
                </value>
                <value>
                    <fullName>Tribune Bonus</fullName>
                </value>
                <value>
                    <fullName>Weekly Recon Processed Incorrectly</fullName>
                </value>
                <value>
                    <fullName>Wrong ISCI Code/800#</fullName>
                </value>
                <value>
                    <fullName>Wrong Length</fullName>
                </value>
                <value>
                    <fullName>Wrong Rate</fullName>
                </value>
                <value>
                    <fullName>Wrong Traffic</fullName>
                </value>
                <value>
                    <fullName>Wrong Units Available</fullName>
                </value>
                <value>
                    <fullName>Wrong Week Selected</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Network - Cancelled Spots Aired</fullName>
                </value>
                <value>
                    <fullName>Network - Incorrect Break Entered</fullName>
                </value>
                <value>
                    <fullName>Network - Incorrect Spot Separation</fullName>
                </value>
                <value>
                    <fullName>Network - Incorrect Units Placed</fullName>
                </value>
                <value>
                    <fullName>Network - Ran Out of Rotation</fullName>
                </value>
                <value>
                    <fullName>Network - Wrong Traffic Aired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filler_Rate__c</fullName>
        <description>Brings Filler Rate from Program object into schedule in order to compare schedule&apos;s :30 rate and mark as filler.

See &quot;New Filler&quot;</description>
        <formula>IF( LEFT(Text(MGM_HD_Daypart__c), 2) = &quot;EM&quot;, Deal_Parent__r.Program__r.Filler_EM__c ,
IF( LEFT(Text(MGM_HD_Daypart__c), 2) = &quot;DA&quot;, Deal_Parent__r.Program__r.Da_Filler__c ,
IF( LEFT(Text(MGM_HD_Daypart__c), 2) = &quot;PR&quot;, Deal_Parent__r.Program__r.PR_Filler__c ,
IF( LEFT(Text(MGM_HD_Daypart__c), 2) = &quot;LN&quot;, Deal_Parent__r.Program__r.LN_Filler__c ,
IF( LEFT(Text(MGM_HD_Daypart__c), 2) = &quot;ON&quot;, Deal_Parent__r.Program__r.ON_Filler__c ,
IF( ISPICKVAL(Deal_Parent__r.Program__r.Cable_Synd__c, &quot;Syndication&quot;)=True,Deal_Parent__r.Program__r.Syndication_Filler__c  ,


0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filler Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filler__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this order is Filler to be used in case of a tape or inventory issue.</description>
        <inlineHelpText>Check if this order is Filler to be used in case of a tape or inventory issue.</inlineHelpText>
        <label>[Dep]Filler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the schedule is for a general market must run schedule</description>
        <label>[Dep]GM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ghost_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ghost Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HH_000__c</fullName>
        <description>Households in thousands</description>
        <label>HH (000)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hearst_Units__c</fullName>
        <formula>(Units_Aired__c +Bonus_Bundle_Units__c) *3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hearst Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISCI2__c</fullName>
        <label>ISCI 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISCI3__c</fullName>
        <label>ISCI 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISCI_CODE__c</fullName>
        <label>ISCI CODE</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impressions_000__c</fullName>
        <formula>Rating__r.HH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impressions (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_game__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-game</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Increvenue__c</fullName>
        <description>Calculates incremental dollars generated relative to filler rate.</description>
        <formula>(X30_Rate__c - Filler_Rate__c )*  CALC_EQUIV_30__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates incremental dollars generated relative to filler rate.</inlineHelpText>
        <label>Increvenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incumbency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incumbency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intacct_CM_Number__c</fullName>
        <label>Intacct CM Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intacct_SI_Number_Date_Fully_Paid__c</fullName>
        <description>This field will be used to determine when the related Intacct Invoice was fully paid in Intacct</description>
        <label>Intacct SI Number Date Fully Paid</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intacct_SI_Number_Payment_Status__c</fullName>
        <description>This field will be automatically populated once the related Intacct SI Number has been marked off as PAID in Intacct</description>
        <label>Intacct SI Number Payment Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intacct_SI_Number__c</fullName>
        <label>Intacct SI Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated__c</fullName>
        <description>Determines whether a schedule has integrated or not.</description>
        <formula>if((today()&gt;Due_Date__c ), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <inlineHelpText>Determines whether a schedule has integrated or not.</inlineHelpText>
        <label>Integrated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrates_This_Week__c</fullName>
        <description>Shows integration week on the schedule object</description>
        <formula>IF(Deal_Parent__r.Program__r.Week_Pending__c= LF_Week__c,0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integrates This Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intg_Date__c</fullName>
        <formula>Week__c +
- ( Deal_Parent__r.Program__r.Log_Week__c  * 7)
+  Deal_Parent__r.Program__r.Intg_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculates integration date base on parameters set on the Program Record</inlineHelpText>
        <label>Intg Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intg_Week__c</fullName>
        <formula>Week__c -( Deal_Parent__r.Program__r.Log_Week__c * 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intg Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <formula>if(MONTH( Broadcast_Month__c )=12, 
   &quot;1/1/&quot;&amp;text(year(Broadcast_Month__c )+1)
   ,text(MONTH( Broadcast_Month__c )+1)&amp;&quot;/1/&quot;&amp;text(year(Broadcast_Month__c ))
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kids_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[Dep]Kids Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LFOrderLineNumber__c</fullName>
        <label>LF Order Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LF_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Brand for Long Form.  Received in Allocation letter post deal</description>
        <label>[Dep]LF Brand</label>
        <referenceTo>Brands__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LF_Daypart__c</fullName>
        <formula>IF (AND ((DealProgram__c  &lt;&gt;  &quot;FB PP&quot;), ( DealProgram__c  &lt;&gt;  &quot;DOC PP&quot;), ( DealProgram__c &lt;&gt; &quot;Outdoor PP&quot;) ), &quot;ON&quot;,

IF ( AND (( DealProgram__c = &quot;FB PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-12:00&quot;)), &quot;ON&quot; , 
IF ( AND (( DealProgram__c = &quot;FB PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-12:30&quot;)), &quot;ON&quot; ,
IF ( AND (( DealProgram__c = &quot;FB PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-1:00&quot;)), &quot;ON&quot;, 
IF ( AND (( DealProgram__c = &quot;FB PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-1:30&quot;)), &quot;ON&quot;, 
IF ( AND (( DealProgram__c = &quot;FB PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-2:00&quot;)), &quot;ON&quot;, 
IF ( AND (( DealProgram__c = &quot;FB PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-2:30&quot;)), &quot;ON&quot;, 
IF ( AND (( DealProgram__c = &quot;FB PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-3:00&quot;)), &quot;ON&quot;,
IF ( AND (( DealProgram__c = &quot;FB PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-3:30&quot;)), &quot;ON&quot;, 
IF ( AND (( DealProgram__c = &quot;FB PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-4:00&quot;)), &quot;ON&quot;,
IF ( AND (( DealProgram__c = &quot;FB PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-4:30&quot;)), &quot;ON&quot;,

IF ( AND (( DealProgram__c = &quot;DOC PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-7:00&quot;)), &quot;EM&quot;,
IF ( AND (( DealProgram__c = &quot;DOC PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-7:30&quot;)), &quot;EM&quot;,
IF ( AND (( DealProgram__c = &quot;DOC PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-8:00&quot;)), &quot;EM&quot;,
IF ( AND (( DealProgram__c = &quot;DOC PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-8:30&quot;)), &quot;EM&quot;,
IF ( AND (( DealProgram__c = &quot;DOC PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-9:00&quot;)), &quot;EM&quot;,
IF ( AND (( DealProgram__c = &quot;DOC PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-9:30&quot;)), &quot;EM&quot;,

IF ( AND (( DealProgram__c = &quot;Outdoor PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-8:30&quot;)), &quot;EM&quot;,
IF ( AND (( DealProgram__c = &quot;Outdoor PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-9:30&quot;)), &quot;EM&quot;,
IF ( AND (( DealProgram__c = &quot;Outdoor PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-8:00&quot;)), &quot;EM&quot;,
IF ( AND (( DealProgram__c = &quot;Outdoor PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-9:30&quot;)), &quot;EM&quot;,
IF ( AND (( DealProgram__c = &quot;Outdoor PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-10:30&quot;)), &quot;DAY&quot;,
IF ( AND (( DealProgram__c = &quot;Outdoor PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-11:30&quot;)), &quot;DAY&quot;,
IF ( AND (( DealProgram__c = &quot;Outdoor PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-3:30&quot;)), &quot;ON&quot;,
IF ( AND (( DealProgram__c = &quot;Outdoor PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-4:00&quot;)), &quot;ON&quot;,
IF ( AND (( DealProgram__c = &quot;Outdoor PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-4:30&quot;)), &quot;ON&quot;,
IF ( AND (( DealProgram__c = &quot;Outdoor PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-5:00&quot;)), &quot;ON&quot;,
IF ( AND (( DealProgram__c = &quot;Outdoor PP&quot;),  ISPICKVAL( Long_Form__c , &quot;A-5:30&quot;)), &quot;ON&quot;,


&quot;WKND DAY&quot;))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LF Daypart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LF_Next_Month_Status__c</fullName>
        <description>Notes the reason that the schedule will not be returning for the following month, where applicable.</description>
        <inlineHelpText>Notes the reason that the schedule will not be returning for the following month, where applicable.</inlineHelpText>
        <label>[Dep]LF Next Month Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Dark</fullName>
                </value>
                <value>
                    <fullName>Outbid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LF_Rate_Needed__c</fullName>
        <description>Rate needed for rebooking of a long form schedule, based on agency results.</description>
        <inlineHelpText>Rate needed for rebooking of a long form schedule, based on agency results.</inlineHelpText>
        <label>[Dep]LF Rate Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LF_Results__c</fullName>
        <description>Additional text commentary on performance of a long form schedule, from agency.</description>
        <inlineHelpText>Additional text commentary on performance of a long form schedule, from agency.</inlineHelpText>
        <label>[Dep]LF Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LF_Week__c</fullName>
        <description>Calculated field to allow &quot;Non-Monday&quot; days in the Week field for Long Form.  This field autocalculates the relevant broadcast week for a Long Form &quot;Day&quot; entered in the week field.</description>
        <formula>CASE(
MOD(  Week__c  - DATE(1900, 1, 7), 7), 
0, Week__c - 6, 
1, Week__c, 
2, Week__c -1, 
3, Week__c - 2, 
4, Week__c - 3, 
5, Week__c- 4, 
6, Week__c - 5, DATE(2001, 1, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LF Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LF_traffic__c</fullName>
        <description>Text Field for Tennis Traffic.... To replace LF Brand lookup Field</description>
        <label>LF Traffic</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Litton_Program_Shows__c</fullName>
        <label>Litton Program Shows</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All In with Laila Ali</fullName>
                </value>
                <value>
                    <fullName>All In with Laila Ali (2)</fullName>
                </value>
                <value>
                    <fullName>Animal Tails</fullName>
                </value>
                <value>
                    <fullName>Culture Click</fullName>
                </value>
                <value>
                    <fullName>Everyday Health</fullName>
                </value>
                <value>
                    <fullName>Everyday Health (2)</fullName>
                </value>
                <value>
                    <fullName>Food For Thought with Claire Thomas</fullName>
                </value>
                <value>
                    <fullName>Food For Thought with Claire Thomas (2)</fullName>
                </value>
                <value>
                    <fullName>Jack Hanna’s Animal Adventures</fullName>
                </value>
                <value>
                    <fullName>Jack Hanna’s Wild Countdown</fullName>
                </value>
                <value>
                    <fullName>Jack Hanna’s Wild Countdown (2)</fullName>
                </value>
                <value>
                    <fullName>Outback Adventures with Tim Faulkner</fullName>
                </value>
                <value>
                    <fullName>Outback Adventures with Tim Faulkner (2)</fullName>
                </value>
                <value>
                    <fullName>Reluctantly Healthy</fullName>
                </value>
                <value>
                    <fullName>Rock the Park</fullName>
                </value>
                <value>
                    <fullName>Sea Rescue</fullName>
                </value>
                <value>
                    <fullName>Sea Rescue (2)</fullName>
                </value>
                <value>
                    <fullName>The Brady Barr Experience</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Long_Form__c</fullName>
        <description>Long Form Time Periods for All Networks</description>
        <label>Long Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-12:00</fullName>
                </value>
                <value>
                    <fullName>A-12:30</fullName>
                </value>
                <value>
                    <fullName>A-1:00</fullName>
                </value>
                <value>
                    <fullName>A-1:30</fullName>
                </value>
                <value>
                    <fullName>A-2:00</fullName>
                </value>
                <value>
                    <fullName>A-2:30</fullName>
                </value>
                <value>
                    <fullName>A-3:00</fullName>
                </value>
                <value>
                    <fullName>A-3:30</fullName>
                </value>
                <value>
                    <fullName>A-4:00</fullName>
                </value>
                <value>
                    <fullName>A-4:30</fullName>
                </value>
                <value>
                    <fullName>A-5:00</fullName>
                </value>
                <value>
                    <fullName>A-5:30</fullName>
                </value>
                <value>
                    <fullName>A-6:00</fullName>
                </value>
                <value>
                    <fullName>A-6:30</fullName>
                </value>
                <value>
                    <fullName>A-7:00</fullName>
                </value>
                <value>
                    <fullName>A-7:30</fullName>
                </value>
                <value>
                    <fullName>A-8:00</fullName>
                </value>
                <value>
                    <fullName>A-8:30</fullName>
                </value>
                <value>
                    <fullName>A-9:00</fullName>
                </value>
                <value>
                    <fullName>A-9:30</fullName>
                </value>
                <value>
                    <fullName>A-10:00</fullName>
                </value>
                <value>
                    <fullName>A-10:30</fullName>
                </value>
                <value>
                    <fullName>A-11:00</fullName>
                </value>
                <value>
                    <fullName>A-11:30</fullName>
                </value>
                <value>
                    <fullName>P-12:00</fullName>
                </value>
                <value>
                    <fullName>P-12:30</fullName>
                </value>
                <value>
                    <fullName>P-1:00</fullName>
                </value>
                <value>
                    <fullName>P-1:30</fullName>
                </value>
                <value>
                    <fullName>P-2:00</fullName>
                </value>
                <value>
                    <fullName>P-2:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MGM_HD_Daypart__c</fullName>
        <description>All available cable dayparts.  Select &quot;Network&quot; above to filter the list based on a specific network.</description>
        <inlineHelpText>All available cable dayparts.  Select &quot;Network&quot; above to filter the list based on a specific network.</inlineHelpText>
        <label>Cable Dayparts</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Networks__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>EM - MS 4a-9a</fullName>
                </value>
                <value>
                    <fullName>EM - MS 6a-10a</fullName>
                </value>
                <value>
                    <fullName>EM - MS 6a-9a</fullName>
                    <color>#33FFFF</color>
                    <label>EM - MS 6a-9a</label>
                </value>
                <value>
                    <fullName>EM - MS 5a-9a</fullName>
                </value>
                <value>
                    <fullName>EM - MS 8a-12p</fullName>
                </value>
                <value>
                    <fullName>DA - MS 8a-6p</fullName>
                </value>
                <value>
                    <fullName>DA - MS 8a-8p</fullName>
                </value>
                <value>
                    <fullName>MF 12a-5a</fullName>
                </value>
                <value>
                    <fullName>DA  - MS - 9a-4p</fullName>
                </value>
                <value>
                    <fullName>MF 6a-9a</fullName>
                </value>
                <value>
                    <fullName>MF 6a-6p</fullName>
                </value>
                <value>
                    <fullName>MF 6p-12a</fullName>
                </value>
                <value>
                    <fullName>SS 12a-5a</fullName>
                </value>
                <value>
                    <fullName>SS 6a-9a</fullName>
                </value>
                <value>
                    <fullName>SS 6a-6p</fullName>
                </value>
                <value>
                    <fullName>SS 6p-12a</fullName>
                </value>
                <value>
                    <fullName>MS 6a-6p</fullName>
                </value>
                <value>
                    <fullName>DA - MS 9a-5p</fullName>
                    <color>#A845DC</color>
                    <label>DA - MS 9a-5p</label>
                </value>
                <value>
                    <fullName>DA - MS 6a-7p</fullName>
                </value>
                <value>
                    <fullName>SS 9a-4p</fullName>
                    <color>#FFFF66</color>
                    <label>SS 9a-4p</label>
                </value>
                <value>
                    <fullName>DA - MF 9a-6p</fullName>
                </value>
                <value>
                    <fullName>DA - SS 9a-6p</fullName>
                </value>
                <value>
                    <fullName>DA - MS 9a-7p</fullName>
                </value>
                <value>
                    <fullName>DA - MS 10a-4p</fullName>
                </value>
                <value>
                    <fullName>DA - MS 9a-6p</fullName>
                    <color>#9999FF</color>
                    <label>DA - MS 9a-6p</label>
                </value>
                <value>
                    <fullName>DA - MS 12p-6p</fullName>
                </value>
                <value>
                    <fullName>PR - MS 6p-12a</fullName>
                    <color>#FF99FF</color>
                    <label>PR - MS 6p-12a</label>
                </value>
                <value>
                    <fullName>MS 12a-6a</fullName>
                    <color>#BBBBBB</color>
                    <label>MS 12a-6a</label>
                </value>
                <value>
                    <fullName>5:00a-5:30a</fullName>
                </value>
                <value>
                    <fullName>5:30a-6:00a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Allowable_Units_Per_Day__c</fullName>
        <formula>(IF(INCLUDES(Days_Allowed__c,&apos;Mon&apos;),1,0) + IF(INCLUDES(Days_Allowed__c,&apos;Tue&apos;),1,0) + IF(INCLUDES(Days_Allowed__c,&apos;Wed&apos;),1,0) + IF(INCLUDES(Days_Allowed__c,&apos;Thu&apos;),1,0) + IF(INCLUDES(Days_Allowed__c,&apos;Fri&apos;),1,0) + IF(INCLUDES(Days_Allowed__c,&apos;Sat&apos;),1,0) + IF(INCLUDES(Days_Allowed__c,&apos;Sun&apos;),1,0)) *  Max_Per_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Allowable Units by Max Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Per_Day__c</fullName>
        <inlineHelpText>The max amount of spots that can run each day for this schedule</inlineHelpText>
        <label>Max Per Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>